--- a/portfolio.html
+++ b/portfolio.html
@@ -90,6 +90,7 @@
         <section>
           <ul class="projects">
             <li class="projects-element">
+              <div class="slide">
               <a href="">
                 <img
                   class="examples"
@@ -97,16 +98,18 @@
                   alt="Технокряк"
                   width="370px"
                 />
+                <!-- <p class="desc-for-header">
+                Технокряк это современная площадка распространения
+                коронавируса. Компании используют эту платформу для цифрового
+                шпионажа и атак на защищённые сервера конкурентов.
+                </p> -->
+                </div>
                 <h2 class="second-header">Технокряк</h2>
                 <p class="filtrs">Веб-сайт</p>
-                <!-- <p class="desc-for-header">
-                Технокряк это современная площадка распространения коронавируса.
-                Компании используют эту платформу для цифрового шпионажа и атак
-                на защищённые сервера конкурентов.
-              </p> -->
               </a>
             </li>
             <li class="projects-element">
+              <div class="slide">
               <a href="">
                 <img
                   class="examples"
@@ -114,12 +117,19 @@
                   alt="Постер"
                   width="370px"
                 />
+<!-- <p class="desc-for-header">
+                Технокряк это современная площадка распространения
+                коронавируса. Компании используют эту платформу для цифрового
+                шпионажа и атак на защищённые сервера конкурентов.
+                </p> -->
+                </div>
                 <h2 class="second-header">Постер New Orlean vs Golden Stars</h2>
                 <p class="filtrs">Дизайн</p>
                 <p class="desc-for-header"></p>
               </a>
             </li>
             <li class="projects-element">
+              <div class="slide" >
               <a href="">
                 <img
                   class="examples"
@@ -127,12 +137,19 @@
                   alt="Ресторан"
                   width="370px"
                 />
+                <!-- <p class="desc-for-header">
+                                Технокряк это современная площадка распространения
+                                коронавируса. Компании используют эту платформу для цифрового
+                                шпионажа и атак на защищённые сервера конкурентов.
+                                </p> -->
+                </div>
                 <h2 class="second-header">Ресторан Seafood</h2>
                 <p class="filtrs">Приложение</p>
                 <p class="desc-for-header"></p>
               </a>
             </li>
             <li class="projects-element">
+              <div class="slide">
               <a href="">
                 <img
                   class="examples"
@@ -140,12 +157,19 @@
                   alt="Прайм"
                   width="370px"
                 />
+                <!-- <p class="desc-for-header">
+                Технокряк это современная площадка распространения
+                коронавируса. Компании используют эту платформу для цифрового
+                шпионажа и атак на защищённые сервера конкурентов.
+               </p> -->
+                </div>
                 <h2 class="second-header">Проект Prime</h2>
                 <p class="filtrs">Маркетинг</p>
                 <p class="desc-for-header"></p>
               </a>
             </li>
             <li class="projects-element">
+              <div class="slide" >
               <a href="">
                 <img
                   class="examples"
@@ -153,12 +177,19 @@
                   alt="Проект"
                   width="370px"
                 />
+                <!-- <p class="desc-for-header">
+                Технокряк это современная площадка распространения
+                коронавируса. Компании используют эту платформу для цифрового
+               шпионажа и атак на защищённые сервера конкурентов.
+              </p> -->
+                </div>
                 <h2 class="second-header">Проект Boxes</h2>
                 <p class="filtrs">Приложение</p>
                 <p class="desc-for-header"></p>
               </a>
             </li>
             <li class="projects-element">
+              <div class="slide" >
               <a href="">
                 <img
                   class="examples"
@@ -166,25 +197,39 @@
                   alt="Монитор"
                   width="370px"
                 />
+<!-- <p class="desc-for-header">
+                Технокряк это современная площадка распространения
+                коронавируса. Компании используют эту платформу для цифрового
+               шпионажа и атак на защищённые сервера конкурентов.
+              </p> -->
+                </div>
                 <h2 class="second-header">Inspiration has no Borders</h2>
                 <p class="filtrs">Веб-сайт</p>
                 <p class="desc-for-header"></p>
               </a>
             </li>
             <li class="projects-element">
-              <a href="">
+              <div class="slide">
+              <a  href="">
                 <img
                   class="examples"
                   src="./jpg/img7.jpg"
                   alt="Издание"
                   width="370px"
                 />
+<!-- <p class="desc-for-header">
+                Технокряк это современная площадка распространения
+                коронавируса. Компании используют эту платформу для цифрового
+               шпионажа и атак на защищённые сервера конкурентов.
+              </p> -->
+                </div>
                 <h2 class="second-header">Издание Limited Edition</h2>
                 <p class="filtrs">Дизайн</p>
                 <p class="desc-for-header"></p>
               </a>
             </li>
             <li class="projects-element">
+              <div class="slide" >
               <a href="">
                 <img
                   class="examples"
@@ -192,12 +237,19 @@
                   alt="ЛАБ"
                   width="370px"
                 />
+<!-- <p class="desc-for-header">
+                Технокряк это современная площадка распространения
+                коронавируса. Компании используют эту платформу для цифрового
+               шпионажа и атак на защищённые сервера конкурентов.
+              </p> -->
+                </div>
                 <h2 class="second-header">Проект LAB</h2>
                 <p class="filtrs">Маркетинг</p>
                 <p class="desc-for-header"></p>
               </a>
             </li>
             <li class="projects-element">
+              <div class="slide">
               <a href="">
                 <img
                   class="examples"
@@ -205,6 +257,12 @@
                   alt="Рост"
                   width="370px"
                 />
+<!-- <p class="desc-for-header">
+                Технокряк это современная площадка распространения
+                коронавируса. Компании используют эту платформу для цифрового
+               шпионажа и атак на защищённые сервера конкурентов.
+              </p> -->
+                </div>
                 <h2 class="second-header">Growing Business</h2>
                 <p class="filtrs">Приложение</p>
                 <p></p>
