--- a/index.html
+++ b/index.html
@@ -36,25 +36,24 @@
             <li class="nav1"><a href="">Контакты</a></li>
           </ul>
         </nav>
-        <ul class="mail">
-          <li class="mail1">
-            <a href="" class="icon-flex">
+          <ul class="mail">
+            <li class="mail1">
+              <a href="" class="icon-flex">
               <svg class="mail1-icon">
                 <use href="./svg/symbol-defs.svg#icon-envelopenew"></use>
               </svg>
               info@devstudio.com
             </a>
-          </li>
-          <li class="mail1">
+            </li>
+            <li class="mail1">
             <a href="" class="icon-flex">
               <svg class="mail1-icon2">
                 <use href="./svg/symbol-defs.svg#icon-Vector"></use>
               </svg>
               +38 096 111 11 11</a>
           </li>
-        </ul>
-      </div>
-      </div>
+          </ul>
+        </div>
     </header>
     <section class="hero-order">
         <h1 class="hero">эффективные решения для вашего бизнеса</h1>
@@ -123,15 +122,15 @@
         <h2 class="head-2-descr">Чем мы занимаемся</h2>
         <ul class="work">
           <li class="work-element">
-            <img src="./jpg/img1.jpg" alt="Ноут" width="370px" class="image-work" />
+            <img src="./jpg/img1.jpg" alt="Ноут" width="370px" height="290px" class="image-work" />
             <h3 class="work-head">Десктопные приложения</h3>
           </li>
           <li class="work-element">
-            <img src="./jpg/box2.jpg" alt="Смартфон" width="370px" class="image-work" />
+            <img src="./jpg/box2.jpg" alt="Смартфон" width="370px" height="290px" class="image-work" />
             <h3 class="work-head">Мобильные приложения</h3>
           </li>
           <li class="work-element">
-            <img src="./jpg/img3.jpg" alt="Монитор2" width="370px" class="image-work"/>
+            <img src="./jpg/img3.jpg" alt="Монитор2" width="370px" height="290px" class="image-work"/>
             <h3 class="work-head">Дизайнерские решения</h3>
           </li>
         </ul>
@@ -300,42 +299,42 @@
         <h2 class="head-2-descr">Постоянные клиенты</h2>
         <ul class="comapanies">
           <li class="comapanies-example">
-            <a href="">
+            <a href="" class="companies-hover">
               <svg class="icon-companies">
                 <use href="./svg/symbol-defs.svg#icon-logo1"></use>
               </svg>
               </a>
           </li>
           <li class="comapanies-example">
-            <a href="">
+            <a href="" class="companies-hover">
               <svg class="icon-companies">
                 <use href="./svg/symbol-defs.svg#icon-logo2"></use>
               </svg>
               </a>
           </li>
           <li class="comapanies-example">
-            <a href="">
+            <a href="" class="companies-hover">
               <svg class="icon-companies">
                 <use href="./svg/symbol-defs.svg#icon-logo3"></use>
               </svg>
               </a>
           </li>
           <li class="comapanies-example">
-            <a href="">
+            <a href="" class="companies-hover">
               <svg class="icon-companies2">
                 <use href="./svg/symbol-defs.svg#icon-logo4"></use>
               </svg>
               </a>
           </li>
           <li class="comapanies-example">
-            <a href="">
+            <a href="" class="companies-hover">
             <svg class="icon-companies2">
               <use href="./svg/symbol-defs.svg#icon-logo5"></use>
             </svg>
             </a>
           </li>
           <li class="comapanies-example">
-            <a href="">
+            <a href="" class="companies-hover">
               <svg class="icon-companies2">
                 <use href="./svg/symbol-defs.svg#icon-logo6"></use>
               </svg>
