--- a/portfolio.html
+++ b/portfolio.html
@@ -50,12 +50,10 @@
                 <svg class="mail1-icon2">
                   <use href="./svg/symbol-defs.svg#icon-Vector"></use>
                 </svg>
-                +38 096 111 11 11</a
-              >
+                +38 096 111 11 11</a>
             </li>
           </ul>
-        </div>
-      </div>
+          </div>
     </header>
     <div class="container">
       <main>
@@ -137,11 +135,8 @@
                   alt="Ресторан"
                   width="370px"
                 />
-                <!-- <p class="desc-for-header">
-                                Технокряк это современная площадка распространения
-                                коронавируса. Компании используют эту платформу для цифрового
-                                шпионажа и атак на защищённые сервера конкурентов.
-                                </p> -->
+                <!-- <p class="desc-for-header"> Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.
+                </p> -->
                 </div>
                 <h2 class="second-header">Ресторан Seafood</h2>
                 <p class="filtrs">Приложение</p>
